src/test/ui/parser/duplicate-visibility.stderr
error: missing `fn`, `type`, or `static` for extern-item declaration
  --> $DIR/duplicate-visibility.rs:4:8
   |
LL |     pub pub fn foo();
   |        ^ missing `fn`, `type`, or `static`

error: aborting due to previous error

